--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -51,6 +51,7 @@ $app-code-color: #d13118;
 @import "components/cookies-page";
 @import "components/call-to-action";
 @import "components/promo-banner";
+@import "components/embed-card";
 @import "components/example";
 @import "components/footer";
 @import "components/header";
@@ -428,4 +429,8 @@ pre .language-plaintext {
   .app-prose-scope & {
     font-weight: normal;
   }
+}
+
+.app-campaign-cookie-banner .govuk-grid-column-two-thirds {
+  width: 100%;
 }
